# fullstack-rust-api

./: .env  .gitattributes  .gitignore  Cargo.toml  README.md  compose.yaml  rust.dockerfile
migrations/: 20240826005155_init.down.sql  20240826005155_init.up.sql
src/: backup_main copy.rs  certoservices.rs  main.rs  model.rs  schema.rs  services.rs  ultimomaincopy.rs
src/backup_services/: documents.rs  mod.rs  tasks.rs
src/services/: backupvideoscopyrs.bak  documents.rs  file_metadatas.rs  logs.rs  mod.rs  parents.rs  photos.rs  photoscopy.rsbak  students.rs  tasks.rs  ultimodocumentscopyrs copy.bak  ultimodocumentscopyrs.bak  ultimophotoscopy.rs  ultimovideoscopyrs.bak  users.rs  videos.rs
src/tests/: documents.rs  tasks.rs
